# django-app

prod/: Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: forms.py
