[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["daria hwanyegi01@gmail.com"]

packages = [
    { include = "mysite", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2.1,<6.0.0"
django-rest-framework = ">=0.1.0,<0.2.0"
django-filter = ">=25.1,<26.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
pillow = ">=11.2.1,<12.0.0"
gunicorn = ">=23.0.0,<24.0.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
